--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -114,3 +114,11 @@ entrypoint = "./functions/auth/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/auth/*.html" ]
+
+[functions.cashflow]
+enabled = true
+verify_jwt = true
+import_map = "./functions/cashflow/deno.json"
+entrypoint = "./functions/cashflow/index.ts"
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/cashflow/*.html" ]
